add api gateway hotels domain
